Complete optimization for importation (add more JVM memory heap)