@@ -4,7 +4,7 @@ apply plugin: 'application'
 mainClassName = 'ch.waterbead.Main'
 mainClass = 'ch.waterbead.Main'
 
-applicationDefaultJvmArgs = ["-Xmx1526m","-Xms256m","-server", "-XX:+UseConcMarkSweepGC"]
+applicationDefaultJvmArgs = ["-Xmx4G","-Xms256m"]
 
 sourceCompatibility = '1.8'
 
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
     compile project(':common')
-    compile 'org.mybatis:mybatis:3.2.7'
+    compile 'org.mariadb.jdbc:mariadb-java-client:1.1.7'
+    compile 'org.jumpmind.symmetric.jdbc:mariadb-java-client:1.1.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
